src/index.css
@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    color: #F5F5F5;
    font-family: 'Montserrat', sans-serif;
    font-weight: medium;
}

/* Global */
.triangle-header-text {
  @apply sm:leading-12 lg:text-4xl lg:leading-15 uppercase md:text-4xl text-3xl m-auto md:w-56 w-48 lg:w-80 py-4 text-center leading-10 font-bold border-t border-b
}

/* homepage */

/* slider */

.slider {
  position: relative;
  height: auto;
  display: flex;
  justify-content: center;
  align-items:center;
}

.image {
  border-radius: 10px;
}

.right-arrow {
  position: absolute;
  /* top: 50%; */
  right: 18px;
  /* font-size: 2.5rem; */
  color: #F5F5F5;
  z-index: 10;
  cursor: pointer;
  user-select: none;
}

.left-arrow {
  position: absolute;
  /* top: 50%; */
  left: 18px;
  /* font-size: 2.5rem; */
  color: #F5F5F5;
  z-index: 10;
  cursor: pointer;
  user-select: none;
}

.slide {
  opacity: 0;
  transition-duration: 1s ease;
}

.slide.active {
  opacity: 1;
  transition-duration: 1s;
  transform: scale(1.08);
}

.homepage-card1 {
    padding: 0;
    margin: auto;
    height: 180px;
    width: 100%;
    background-image: url(./assets/img/manufacturing.png);
    background-size: cover;
    background-repeat: no-repeat;
    border-bottom: solid 0.5px #F5F5F5;
}

.homepage-card2 {
    padding: 0;
    margin: auto;
    height: 180px;
    width: 100%;
    background-image: url(./assets/img/machining.png);
    background-size: cover;
    background-repeat: no-repeat;
    border-bottom: solid 0.5px #F5F5F5;
}

.homepage-card3 {
    padding: 0;
    margin: auto;
    height: 180px;
    width: 100%;
    background-image: url(./assets/img/welding.png);
    background-size: cover;
    background-repeat: no-repeat;
    border-bottom: solid 0.5px #F5F5F5;
}

.homepage-card4 {
    padding: 0;
    margin: auto;
    height: 180px;
    width: 100%;
    background-image: url(./assets/img/quality.png);
    background-size: cover;
    background-repeat: no-repeat;
}
.homepage-btn {
    @apply bg-copyright bg-opacity-40 border rounded-lg py-2 px-3 text-white text-lg font-special lg:py-3 lg:px-4 lg:text-2xl z-50 transition-all duration-500 hover:bg-gray-600
}

.homepage-card-text {
    @apply flex flex-col justify-center items-center
}

.homepage-card-h2 {
    @apply text-2xl font-semibold pb-1 xl:text-4xl
}

.homepage-card-h3 {
    @apply font-special text-xl pt-2 xl:text-3xl
}

.homepage-span {
    @apply text-red font-bold
}

/* contact page */

.contact-text {
    @apply text-xl pb-1 font-special pt-4 lg:text-2xl
}

.contact-input {
    @apply w-72 bg-copyright bg-opacity-20 border-2 border-copyright rounded py-1 px-2 lg:py-2 lg:px-3
}

.contact-image {
    padding: auto;
    margin: auto;
    height: 115vh;
    width: 100%;
    background-image: url(./assets/img/contactWheels.png);
    background-size: fill; /* Scale the image to fit within the container */
    background-position: center center; /* Center the image horizontally and vertically */
    background-repeat: no-repeat;
    margin-bottom: 50px;
}

/* Media query for medium screens (max-width: 768px) */
@media (min-width: 768px) {
    .contact-image {
      height: 90vh; /* Set the desired height for medium screens */
    }
  }

/* About page */
/* About Header */

.triangle {
  background-image: url(./assets/img/triangle.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right;
  padding: 0;
  margin: 0;
  height: 100vh;
  width: 43%;
}


/* About timeline */
  .vertical-timeline-element-content {
  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
  background: rgba(0, 0, 0, .1);
  background-size: cover;
  background-repeat: no-repeat;
  color: #F5F5F5;
}

.vertical-timeline-element-icon{
  background-color: white;
  box-shadow: none;
}

.vertical-timeline-element-content-arrow {
  display: none;
}

.background-image-1 .vertical-timeline-element-content {
  background-image: url(./assets/img/kenney1968.png);
}

.background-image-2 .vertical-timeline-element-content {
  background-image: url(./assets/img/kenney1992.png);
}

.background-image-3 .vertical-timeline-element-content {
  background-image: url(./assets/img/kenney2001.png);
}

.background-image-4 .vertical-timeline-element-content {
  background-image: url(./assets/img/manufacturing.png);
}

.background-image-5 .vertical-timeline-element-content {
  background-image: url(./assets/img/kenney2010.png);
}

